adding method with custom parameters and changing data